# bh3scan

./: Cargo.toml  README.md  pyproject.toml
crates/bh3scan/: Cargo.toml
crates/bh3scan/src/: cli.rs  formatter.rs  logger.rs  main.rs
crates/bh3scan/src/sdk/: bsgame.rs  mihoyo.rs  mod.rs  scanner.rs  sign.rs
rules/: no-venv-logger.yml
src/bh3scan/: bsgamesdk.py  cli.py  errors.py  mihoyosdk.py  request.py  scannersdk.py
