[project]
name = "bh3scan"
version = "0.1.0"
description = ""
dependencies = [
    "typer>=0.20.0",
    "platformdirs>=4.5.0",
    "requests>=2.32.5",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pycryptodome>=3.23.0",
    "pyzbar>=0.1.9",
    "pillow>=12.0.0",
]
readme = "README.md"
requires-python = ">= 3.12, <3.14"


[project.scripts]
bh3scan = "bh3scan.cli:main"

[tool.ruff.lint]
extend-select = [
    "A",    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "B006", # https://docs.astral.sh/ruff/rules/mutable-argument-default/
    "I",    # https://docs.astral.sh/ruff/rules/#isort-i
    "INP",  # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
]


[tool.uv]
package = true
environments = ["sys_platform == 'win32'"]
