[package]
name = "bh3scan"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
md-5 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
zedbar = { workspace = true }
scrap = { workspace = true }
directories = { workspace = true }
log4rs = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }
